<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.alertme.zoo.shared</groupId>
        <artifactId>zoo-parent</artifactId>
        <version>1.0-b66</version>
    </parent>

    <!-- PROJECT METADATA -->
    <groupId>ch.qos.logback</groupId>
    <artifactId>logback-s3-rolling-policy</artifactId>
    <name>Logback RollingPolicy with S3 upload</name>
    <version>GIT-SNAPSHOT</version>

    <!-- CODE MANAGEMENT -->
    <scm>
        <tag>HEAD</tag>
        <url>https://git@github.com/link-nv/logback-s3</url>
        <connection>scm:git:ssh://git@github.com/link-nv/logback-s3</connection>
        <developerConnection>scm:git:ssh://git@github.com/link-nv/logback-s3</developerConnection>
    </scm>

    <properties>
        <distribution.repo.id>${honeycomb.repo.id}</distribution.repo.id>
        <distribution.repo.url>${honeycomb.repo.url}</distribution.repo.url>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <java.version>17</java.version>
        <aws-java-sdk.version>1.12.688</aws-java-sdk.version>
        <logback.version>1.4.14</logback.version>
        <jakarta-servlet.version>6.0.0</jakarta-servlet.version>
        <google-guava.version>33.1.0-jre</google-guava.version>
        <slf4j.version>2.0.12</slf4j.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId> com.amazonaws</groupId>
            <artifactId>aws-java-sdk-s3</artifactId>
            <version>${aws-java-sdk.version}</version>
        </dependency>

        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-core</artifactId>
            <version>${aws-java-sdk.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${google-guava.version}</version>
        </dependency>

        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>${jakarta-servlet.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

    </dependencies>

</project>
